workaround for Firefox bug 517578, color the framelocator in gray when not running tests to prevent false location when another window is visible with the test frame

--- a/w3testrunner/resources/testrunner/testrunner.css
+++ b/w3testrunner/resources/testrunner/testrunner.css
@@ -73,9 +73,12 @@ a:hover{
 }
 
 #framelocator {
-  background-color: blue;
+  background-color: gray;
   height: 20px;
   width: 802px; /* Width of the frame border box */
+}
+body.status-running #framelocator {
+  background-color: blue;
 }
 #testframe {
   border: 1px lime solid;
